# ncs-scalable-virusscanner

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  buildkitd.toml  docker-compose.yaml  generate_protos.sh  pyproject.toml  walkthrough.md
.github/workflows/: e2e.yaml  release.yaml
docs/examples/envoy-interception/: README.md  docker-compose.yaml  envoy.yaml  setup.sh  test_stack.sh
docs/examples/envoy-interception/scan_service/: .dockerignore  Dockerfile  README.md  pyproject.toml
docs/examples/envoy-interception/scan_service/src/scanning/common/: settings.py
docs/examples/envoy-interception/scan_service/src/scanning/common/providers/: base.py  redis_stream.py
docs/examples/envoy-interception/scan_service/src/scanning/consumer/: main.py
docs/examples/envoy-interception/scan_service/src/scanning/core/: containers.py
docs/examples/envoy-interception/scan_service/src/scanning/producer/: main.py  service.py
docs/examples/jupyterhub/: README.md  envoy-config.yaml
helm/: .gitmodules  Chart.yaml  README.md  values.yaml
helm/reference/helm/helm-clamav/: .gitignore  .gitlab-ci.yml  LICENSE  renovate.json
helm/reference/helm/helm-clamav/chart/: .helmignore  Chart.yaml  README.md  values.schema.json  values.yaml
helm/reference/helm/helm-clamav/chart/templates/: NOTES.txt  configmap.yaml  deployment.yaml  hpa.yaml  pdb.yaml  rbac.yaml  service.yaml  serviceaccount.yaml  update-cron.yaml
helm/templates/: _helpers.tpl  configmap-clamav.yaml  deployment-consumer.yaml  producer-deployment.yaml  producer-service.yaml  pvc.yaml  scaledobject.yaml
src/aether_platform/intelligent_cache/: README.md
src/aether_platform/intelligent_cache/application/: service.py
src/aether_platform/intelligent_cache/domain/: policy.py
src/aether_platform/intelligent_cache/infrastructure/: minio_store.py  nfs_store.py
src/aether_platform/virusscan/: README.md
src/aether_platform/virusscan/common/: settings.py
src/aether_platform/virusscan/common/providers/: __init__.py  base.py  inline.py  redis_stream.py  shared_disk.py
src/aether_platform/virusscan/common/queue/: provider.py
src/aether_platform/virusscan/consumer/: containers.py  main.py  settings.py
src/aether_platform/virusscan/consumer/application/: service.py
src/aether_platform/virusscan/consumer/infrastructure/: coordinator.py  engine_client.py  nats_publisher.py
src/aether_platform/virusscan/domain/: models.py
src/aether_platform/virusscan/producer/: README.md  containers.py  main.py  metrics.py  settings.py
src/aether_platform/virusscan/producer/application/: feature_flags.py  orchestrator.py
src/aether_platform/virusscan/producer/infrastructure/: redis_adapter.py
src/aether_platform/virusscan/producer/validate/: validate_pb2.py  validate_pb2_grpc.py
src/virus_scanner/common/: settings.py
src/virus_scanner/common/providers/: inline.py  redis_stream.py  shared_disk.py
src/virus_scanner/consumer/: containers.py  coordinator.py  engine.py  handler.py  main.py  providers.py  service.py  settings.py
src/virus_scanner/consumer/providers/body/: __init__.py
src/virus_scanner/producer/: README.md  containers.py  main.py  service.py  settings.py
tests/: test_sds_gen.py
tests/e2e_ssl_bump/: docker-compose-e2e.yaml  docker-compose-hybrid.yaml  envoy-e2e-local.yaml  envoy-e2e.yaml  mock_console.py  test-envoy.yaml  verify_e2e.py
tests/e2e_ssl_bump/certs/: ca.crt  ca.key  server.crt  server.csr  server.key
tests/from_redis/: test_injection.py
tests/integrated/: test_producer.py
tests/integrated/from_redis/: test_injection.py  test_stream_scan.py
tests/local/from_consumer/: test_handler.py  test_service.py
tests/unit/: test_icap_cache.py
(+59 files in other folders)
