[project]
name = "virus-scanner-image"
version = "0.1.0"
description = "NCS Virus Scanner Request Handler"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "clamd>=1.0.2",
    "click>=8.3.1",
    "dependency-injector>=4.48.3",
    "redis>=7.1.0",
]

[project.scripts]
virus-scanner-handler = "virus_scanner.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/virus_scanner"]
