[project]
name = "virus-scanner-image"
version = "0.1.0"
description = "NCS Virus Scanner Request Handler"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "redis>=7.1.0",  # Common dependency
]

[project.optional-dependencies]
consumer = [
    "clamd>=1.0.2",
    "click>=8.3.1",
    "dependency-injector>=4.48.3",
    "psutil>=5.9.0",  # Memory monitoring
    "kubernetes>=31.0.0", # K8s API client
]
producer = [
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",
    "dependency-injector>=4.48.3",
    "googleapis-common-protos>=1.62.0",
]
all = [
    "virus-scanner-image[consumer,producer]",
]

[project.scripts]
virus-scanner-handler = "virus_scanner.consumer.main:main"
virus-scanner-producer = "virus_scanner.producer.main:serve"
virus-scanner-restart = "virus_scanner.consumer.main:rollout_restart"
virus-scanner-update = "virus_scanner.consumer.main:set_target_epoch"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/virus_scanner"]
