[project]
name = "virus-scanner-image"
version = "0.1.0"
description = "NCS Virus Scanner Request Handler"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "redis>=7.1.0",
    "click>=8.3.1",
]

[project.optional-dependencies]
consumer = [
    "clamd>=1.0.2",
    "dependency-injector>=4.48.3",
    "psutil>=5.9.0",  # Memory monitoring
    "kubernetes>=31.0.0", # K8s API client
]
producer = [
    "dependency-injector>=4.48.3",
    "flagsmith>=3.3.0",
]
all = [
    "virus-scanner-image[consumer,producer]",
]

[project.scripts]
virus-scanner-handler = "aether_platform.virusscan.consumer.main:main"
virus-scanner-producer = "aether_platform.virusscan.producer.main:serve"
virus-scanner-restart = "aether_platform.virusscan.consumer.main:rollout_restart"
virus-scanner-update = "aether_platform.virusscan.consumer.main:set_target_epoch"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aether_platform"]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "flake8-class-attributes-order>=0.3.0",
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
]
